TM-12025 was validated in task-comment component which of element wants to display

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/dialog/task-comment-dialog.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/dialog/task-comment-dialog.component.html
@@ -15,7 +15,8 @@
                         [can-edit-comments]="true"
                         [can-edit-tasks]="true"
                         [asset-name]="assetModalModel.assetName"
-                        [asset-type]="assetModalModel.assetType">
+                        [asset-type]="assetModalModel.assetType"
+                        [show-comment]="true">
                 </task-comment>
             </td>
         </div>
