TM-12078 Validate missing fields

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -9,6 +9,8 @@
   .dialog-container
     border: 1px solid transparent
     padding: 0
+    .required-field
+      color: $color-message-error--red
   .prop
     padding: 5px
   .prop .name
