TM-12034 Fix issue displaying duplicated tasks dependency error

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -39,6 +39,9 @@
           td
             label
               visibility: hidden
+        tr.dependency-error-section
+          table
+            width: 100%
 
         table.has-duplicated-successors
           tr.dependency-error-section.has-duplicated
