TM-12034 Fix issue displaying validatio error fields on pristine form

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -83,11 +83,11 @@
         .error-message
           display: none
         .validated-field
-          .ng-invalid
+          .ng-invalid:not(.ng-pristine)
             border-color: $color-message-error--red
-          .ng-invalid + .error-message
+          .ng-invalid:not(.ng-pristine) + .error-message
             display: block
-        .validated-field > .ng-invalid
+        .validated-field > .ng-invalid:not(.ng-pristine)
           & ~ .error-message
             display: block
         .required-field::after
