--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" tds-autocenter class="task-detail-component modal fade in tds-ui-modal-decorator" id="task-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-detail-component modal fade in tds-ui-modal-decorator" id="task-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content resizable tds-angular-component-content"
              tds-ui-modal-decorator=""
@@ -9,10 +9,10 @@
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">Edit: {{model.title}}</h4>
+                <h4 class="modal-title">{{model.title}}</h4>
             </div>
             <div class="modal-body">
-                <form #taskEditForm="ngForm" class="full-height">
+                <form #taskCreateForm="ngForm" class="full-height">
                     <table style="border: 0;" class="full-height"
                            [ngClass]="{'has-duplicated-predecessors': modelHelper.hasDuplicatedPredecessors(),
                                        'has-duplicated-successors': modelHelper.hasDuplicatedSuccessors(),
@@ -452,38 +452,6 @@
                                     </td>
                                 </tr>
                             </table>
-                        </tr>
-                        <tr class="deps grow-container">
-                            <td colspan="5">
-                                <kendo-grid
-                                        *ngIf="dataGridTaskNotesHelper"
-                                        class="successor-predecessor-table has-double-assignment"
-                                        [data]="dataGridTaskNotesHelper.gridData"
-                                        [sort]="dataGridTaskNotesHelper.state.sort"
-                                        [sortable]="{mode:'single'}"
-                                        [resizable]="false"
-                                        (sortChange)="dataGridTaskNotesHelper.sortChange($event)">
-                                    <!-- Toolbar Template -->
-                                    <ng-template kendoGridToolbarTemplate [position]="'top'">
-                                        <label class="pad-top-2 pad-left-10 mar-bottom-0">Task Notes ({{dataGridTaskNotesHelper.gridData.data.length}})</label>
-                                    </ng-template>
-                                    <!-- Columns -->
-                                    <kendo-grid-column *ngFor="let column of taskNotesColumnsModel.columns"
-                                                       field="{{column.property}}"
-                                                       [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
-                                        <!-- Header Template -->
-                                        <ng-template kendoGridHeaderTemplate>
-                                            <label>{{column.label}}</label>
-                                        </ng-template>
-
-                                        <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex" >
-                                            <div class="pad-left-7 pad-bot-6">{{dataItem[column.property]}}</div>
-                                        </ng-template>
-
-                                    </kendo-grid-column>
-                                    <kendo-grid-messages noRecords="There are no records to display."> </kendo-grid-messages>
-                                </kendo-grid>
-                            </td>
                         </tr>
                         </tbody>
                     </table>
