TM-12188 was added edit button to the new asset list view

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -80,6 +80,11 @@
 		<ng-template kendoGridCellTemplate let-dataItem>
 			<div class="text-center">
 				<button class="btn btn-action btn-default"
+						title="Edit Asset"
+						(click)="showAssetEditView(dataItem)">
+					<span class="fa fa-fw fa-edit"></span>
+				</button>
+				<button class="btn btn-action btn-default"
 						title="Create Comment or Show Comments"
 						(click)="showComment(dataItem)">
 					<span class="fa fa-fw fa-comment"></span>
