--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -37,7 +37,9 @@
             </span>
             <button type="button" class="btn btn-default" id="btnExport" (click)="onExport()">
                 <i class="fa fa-fw fa-download"></i> Export</button>
-            <asset-explorer-view-selector #select="assetExplorerViewSelector"></asset-explorer-view-selector>
+            <asset-explorer-view-selector
+                    #select="assetExplorerViewSelector">
+            </asset-explorer-view-selector>
             <span class="btn" (click)="onEdit()" *ngIf="isEditAvailable()" style="margin:0 10px;padding:5px 10px;float:right;">
                 <i style="font-size:20px;" class="fa fa-cog"></i>
             </span>
@@ -48,6 +50,7 @@
             <div class="box-body">
                 <asset-explorer-view-grid #grid="assetExplorerViewGrid"
                                           (modelChange)="onQuery()"
+                                          [fields]="fields"
                                           [edit]="false"
                                           [model]="model.schema"
                                           [viewId]="model.id"
