--- a/web-app/tds/web-app/app-js/app/tds-app.component.html
+++ b/web-app/tds/web-app/app-js/app/tds-app.component.html
@@ -1,8 +1,5 @@
-<!-- <tds-ui-loader></tds-ui-loader> -->
-<!-- <tds-ui-toast></tds-ui-toast> -->
-
-<!-- <div ui-view="headerView"></div> -->
-<!-- <div ui-view="containerView"></div> -->
+<tds-ui-loader></tds-ui-loader>
+<tds-ui-toast></tds-ui-toast>
 
 <tds-header></tds-header>
 <router-outlet></router-outlet>
