--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -27,6 +27,11 @@
       min-height: 890px
     .modal-body
       height: 86%
+      form.create-form
+        td.description-container
+          max-width: 100%
+          input
+            width: 100%
       form
         .note
           resize: none
