TM-12034 Doing bottoms grids fill all available height

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -19,6 +19,9 @@
     .successor-predecessor-table
       max-height: 200px
       height: 200px
+  .modal-content.task-create-component
+    min-height: 720px
+    min-width: 769px
   .modal-content
     min-height: 760px
     min-width: 769px
@@ -196,6 +199,8 @@
       .grow-container
         display: flex
         flex: 1
+        table.create-task
+          height: 100%
         td
           flex: 1
           position: relative
