--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -1,7 +1,7 @@
 <div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-detail-component modal fade in tds-ui-modal-decorator"
      id="task-component" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content resizable tds-angular-component-content"
+        <div class="modal-content resizable tds-angular-component-content task-create-component"
              tds-ui-modal-decorator=""
              [options]="modalOptions"
              [style.width.px]="860"
@@ -335,8 +335,8 @@
                                 </table>
                             </td>
                         </tr>
-                        <tr class="deps no-grow-container">
-                            <table>
+                        <tr class="deps grow-container">
+                            <table class="create-task">
                                 <tr>
                                     <td valign="top">
                                         <kendo-grid
