--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -201,6 +201,8 @@
         flex: 1
         table.create-task
           height: 100%
+          td
+            height: 100%
         td
           flex: 1
           position: relative
