TM-10993 POC - Lazy Loading - Refactored several modules to inject in a better way the Module Resolver - Fixed problems with the Preferences, now being injected on the component. - Fixed the Tag Dropdown (thanks David)

--- a/web-app/tds/web-app/app-js/modules/assetTags/components/tag-list/tag-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetTags/components/tag-list/tag-list.component.html
@@ -110,6 +110,7 @@
                             <kendo-dropdownlist required name="color" class="form-control"
                                                 [data]="colorList"
                                                 [(ngModel)]="dataItem.color"
+                                                [textField]="'id'"
                                                 [valueField]="'id'"
                                                 [valuePrimitive]="true">
                                 <ng-template kendoDropDownListValueTemplate let-dataItem>
