TM-12034 Move tasks components to its own module

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -457,7 +457,7 @@
             </div>
             <div class="modal-footer form-group-center">
                 <button class="btn btn-primary pull-left"
-                        [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onSave()" type="button">
+                        [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onCreate()" type="button">
                     <span  class="fa fa-fw fa-floppy-o"></span>
                     <span>Update</span>
                 </button>
