TM-10993 POC - Lazy Loading - Refactor the listener inside the Show Config and View Asset Grid - Implemented reload strategy

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
@@ -165,6 +165,7 @@
 		</div>
 		<asset-explorer-view-grid #grid="assetExplorerViewGrid"
                                   (modelChange)="onPreview()"
+								  [fields]="allFields"
                                   [edit]="true"
                                   [model]="model.schema"
 		                          [viewId]="model.id"
