--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-selector/asset-explorer-view-selector.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-selector/asset-explorer-view-selector.component.html
@@ -38,7 +38,7 @@
 				</li>
 				<li>
 					<ul style="padding-left:10px;margin-top:5px;" *ngFor="let value of dataItem.items">
-						<a [routerLink]="['asset','views',value.id,'show']">
+						<a [routerLink]="['/asset','views',value.id,'show']">
 							<i class="fa fa-file-text-o"></i> {{value.name}}</a>
 					</ul>
 				</li>
