--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -92,6 +92,9 @@
           background-color: #fff
           color: #777
           margin-right: 5px
+      .dropdown-menu
+        .create-selected
+          background-color: #e1e3e9
 
   .btn-between-space-5
     margin-right: 5px
