--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-selector/asset-explorer-view-selector.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-selector/asset-explorer-view-selector.component.html
@@ -33,8 +33,7 @@
 			</div>
 			<div class="row" style="margin-top:5px;" *ngIf="dataItem.open">
 				<li *ngIf="isCreateVisible(dataItem)">
-					<a (click)="onCreateNew(dataItem)" class="btn">
-						<i class="fa fa-plus-square"></i> Create New</a>
+					<a (click)="onCreateNew(dataItem)" class="btn"><i class="fa fa-plus-square"></i> Create New</a>
 				</li>
 				<li>
 					<ul style="padding-left:10px;margin-top:5px;" *ngFor="let value of dataItem.items">
