--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -76,7 +76,7 @@
                                                                 [data]="model.eventList"
                                                                 [textField]="'text'"
                                                                 [valueField]="'id'"
-                                                                [(ngModel)]="model.event" readonly="true">
+                                                                [(ngModel)]="model.event">
                                                         </kendo-dropdownlist>
                                                     </td>
                                                 </tr>
